test/fail/local-shadow.rnp
let a = 1;
{
  let a = 1;
}
---
 --> fail/local-shadow.rnp:3:7
  |
3 |   let a = 1;
  |       ^ Cannot shadow or redeclare a
  |
